# alpha-agent

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: TODO.md  memory_design.md
docs/cognition/: cognition.md  cognition_from_scratch.md  memory_design.md
docs/develop_record/: background_pipeline_drain_refactor_plan.md  bash-tool-implementation-plan.md  cognition_source_time_plan.md  daemon_runtime_architecture.md  durable_system_reminder_context_plan.md  external_conversation_import_plan.md  memory-propose-internal-tool.md  memory-system-optimization-phases-completed.md  memory-system-optimization-phases.md  memory_update_protocol.md  phase-02-reactive-tick.md  phase-03-belief-projection.md  phase-04-context-window.md  (+11 more)
tests/: memory_eval.py  test_agent_loop.py  test_bash_tool.py  test_cli_agent_loop.py  test_cli_daemon.py  test_cli_deepseek_import_convert.py  test_config.py  test_consolidation.py  test_context_budget.py  test_context_handover.py  test_conversation_import_service.py  test_daemon_ipc.py  test_daemon_lifecycle.py  test_daemon_manager.py  test_daemon_runtime.py  test_deepseek_import_converter.py  test_file_tools.py  test_gateway_cli.py  test_gateway_core.py  test_llm_providers.py  test_llm_tracing.py  test_memory_extraction_eval.py  test_memory_review.py  test_memory_store.py  test_prompt_builder.py  test_retrieval.py  test_session_context.py  test_state_reminders.py  test_state_store.py  test_tool_governance.py  test_url_safety.py  test_web_fetch_tool.py  test_web_search_tool.py
(+336 files in other folders)
